# dnd-mentee-4th-5-backend

./: .coveragerc  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
app/: container.py  main.py  routers.py  settings.py
app/auth/application/: dtos.py  service.py
app/auth/domain/: value_objects.py
app/auth/external_interface/: json_dto.py  routers.py
app/drinks/application/: dtos.py  service.py
app/drinks/domain/: entities.py  repository.py  value_objects.py
app/drinks/external_interface/: json_dto.py  routers.py
app/drinks/infra_structure/: in_memory_repository.py  orm_models.py  orm_repository.py
app/health/external_interface/: routers.py
app/reviews/application/: dtos.py  exceptions.py  service 3.py  service.py
app/reviews/domain/: entities.py  repository.py  value_objects.py
app/reviews/external_interface/: json_dtos.py  routers.py
app/reviews/infra_structure/: container.py  in_memory_repository.py  orm_models.py  orm_repository.py
app/shared_kernel/application/: dtos.py
app/shared_kernel/domain/: exceptions.py  value_objects.py
app/shared_kernel/external_interface/: json_dto.py  json_dtos.py
app/shared_kernel/infra_structure/: database.py  exceptions.py
app/users/application/: dtos.py  exceptions.py  service.py
app/users/domain/: entities.py  repository.py  value_objects.py
app/users/external_interface/: json_dto.py  routers.py
app/users/infra_structure/: container.py  in_memory_repository.py  orm_models.py  orm_repository.py
app/wishes/application/: dto.py  service.py
app/wishes/domain/: entities.py  repository.py  value_objects.py
app/wishes/external_interface/: json_dtos.py  routers.py
app/wishes/infra_structure/: in_memory_repository.py  orm_models.py  orm_repository.py
tests/: conftest.py  test_routers.py
tests/auth/application/: test_service.py
(+17 files in other folders)
